site-ecommerce-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-ecommerce-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: site-ecommerce
  template:
    metadata:
      labels:
        app: site-ecommerce
    spec:
      containers:
      - name: site-ecommerce
        image: localhost:5000/todo-app
        volumeMounts:
          - name: site-ecommerce-volume
            mountPath: /etc/todos
        ports:
        - containerPort: 3000
      volumes:
        - name: site-ecommerce-volume
          persistentVolumeClaim:
            claimName: site-ecommerce-pvc
