site-ecommerce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-ecommerce-service
  labels:
    app: site-ecommerce
spec:
  selector:
    app: site-ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
